project desc on mobile fixed

--- a/style.css
+++ b/style.css
@@ -499,6 +499,11 @@ body > div > div.project-showcase-row > div:nth-child(3) > div{
     .project-description{
         margin-top: -5px;
         font-size: 16px;
+        white-space: wrap !important;
+        width: 350px;
+        overflow: auto;
+        overflow-y: visible;
+        overflow-x: visible;
     }
 }
 
